--- a/CLOVER/config.plist
+++ b/CLOVER/config.plist
@@ -317,7 +317,7 @@
 				<key>Replace</key>
 				<data>SW50ZXJuYWw=</data>
 				<key>Disabled</key>
-				<false/>
+				<true/>
 				<key>Comment</key>
 				<string>External icons patch</string>
 				<key>InfoPlistPatch</key>
